# Syspop

./: .Rhistory  .gitattributes  .gitignore  README.md  env.yml  makefile  pyproject.toml  setup.py  synpop.py  syspop.py  test.py  test2.py  test_syntheticpop.py
etc/: get_osm_data.py  plot_agents_movement_animation.py
etc/archive/: llamaindex_test_dataframe.py  llamaindex_test_texts.py  test.py  test2.py
etc/dash/: app.py
etc/examples/: run_animal.R  run_animal.py  run_diary.py  run_nz.R  run_nz.py  run_validation.py  run_vis.py
etc/ipf_synpop/: adjusted_pop.py  ipf.py
etc/llm-diary/: README.md  combine_diary.bash  combine_diary.py  create_diary.bash  create_diary.py  env.yml  makefile  run_diary.bash
etc/route_model/: create_routes.py  plot_routes.py  run_wrapper.py
etc/rshiny/: data.R  server.R  ui.R
etc/sample_data/: mapping.xlsx  sample_data.pkl  sample_data_cfg.yml  sample_model_cfg.yml  stochastic_imputed_data.parquet
etc/scripts_nz/: create_nz_data.bash  create_nz_data.py  get_osm_data.py  input.yml  input_cfg.yml  input_v1.0.yml  input_v2.0.yml
etc/scripts_tonga/: create_household_composition.py  create_pop.py  create_tonga_data.py
etc/validate_scripts/: validate_people_movements.py
examples/: nz_census.py  simple_example.py
process/: __init__.py  address.py  base_pop.py  business.py  commute.py  hospital.py  household.py  school.py  shared_space.py  social_economic.py  utils.py  work.py
renv/: activate.R
syspop/: create_pop.py  run_nz.R  run_nz.py  run_tonga.py  start.R  start.py  syspop.R  syspop.py  test.py  wrapper_pop.py
(+219 files in other folders)
