[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syspop_v2"
version = "0.4.2"
authors = [
  { name="Sijin Zhang", email="zsjzyhzp@gmail.com" },
]
description = "A package for stochastic population imputation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# List the external libraries your package needs to run
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pyarrow",
    "graphviz"
]

[project.urls]
"Homepage" = "https://github.com/jzanetti/Syspop"
"Bug Tracker" = "https://github.com/jzanetti/Syspop/issues"

[tool.setuptools.packages.find]
where = ["."]          # Tells it to look in the current root directory
include = ["syspop*"]  # Grabs your 'syspop' folder and everything inside it
exclude = ["examples*"] # Ensures the 'examples' folder doesn't get published